<resources>
    <string name="app_name">CocktailCatalog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="add">Add Drink</string>
    <string name="favorite">Favorite Drinks</string>

    <string name="add_to_favorite">add drink to favorites</string>
    <string name="remove_from_favorite">remove drink from favorites</string>
    <string name="ingredients">Ingredients:</string>
    <string name="search_results">Drinks that You can make:</string>
    <string name="no_drinks_found">Sorry, no drinks found</string>
    <string name="are_you_over_18_years_old">Are you over 18 years old?</string>
    <string name="name">Name</string>
    <string name="select_drink_ingredients">Select drink ingredients:</string>
    <string name="next_step">next step</string>
    <string name="instructions">Instructions</string>
    <string name="image_url">Image URL</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="add_drink">add drink</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="over_18">false</string>
    <string name="recent_drinks">Recent drinks:</string>
    <string name="drink_category">Category:</string>
</resources>