<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.EditDrinkFragment">

    <TextView
        android:id="@+id/textViewEditDrinkNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEditDrinkName"
        android:layout_width="255dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textViewEditDrinkNameLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEditDrinkInstructionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/instructions"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditDrinkNameLabel" />

    <EditText
        android:id="@+id/editTextEditDrinkInstructions"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/editTextEditDrinkName"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditDrinkName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/image_url"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textViewEditDrinkInstructionLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditDrinkInstructionLabel" />

    <EditText
        android:id="@+id/editTextEditDrinkImageURL"
        android:layout_width="255dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textUri"
        app:layout_constraintStart_toStartOf="@+id/editTextEditDrinkInstructions"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditDrinkInstructions" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="27dp"
        android:text="@string/alcoholic"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Switch
        android:id="@+id/switchEditDrinkAlcoholic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/editTextEditDrinkImageURL"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditDrinkImageURL"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>